// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Engagement form fields Additional details form matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="additional_details"
          >
            <span
              class="pf-c-form__label-text"
            >
              Additional Information
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <textarea
            aria-invalid="false"
            aria-label="Additional provisioning information"
            class="pf-c-form-control pf-m-resize-vertical"
            data-testid="additional-details-text-area"
            disabled=""
            id="additional_details"
            name="additional_details"
            placeholder="Provide additional details"
          >
            details
          </textarea>
          
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="additional_details"
        >
          <span
            class="pf-c-form__label-text"
          >
            Additional Information
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <textarea
          aria-invalid="false"
          aria-label="Additional provisioning information"
          class="pf-c-form-control pf-m-resize-vertical"
          data-testid="additional-details-text-area"
          disabled=""
          id="additional_details"
          name="additional_details"
          placeholder="Provide additional details"
        >
          details
        </textarea>
        
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Engagement form fields Cloud provider form matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="Hosting Platform"
          >
            <span
              class="pf-c-form__label-text"
            >
              Hosting Type
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <select
            aria-invalid="false"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-FormSelect-default-1"
            data-ouia-component-type="PF4/FormSelect"
            data-ouia-safe="true"
            disabled=""
            required=""
          >
            <option
              aria-label="Hosting Platform"
              class=""
              value=""
            >
              OpenShift Container Platform
            </option>
          </select>
          
        </div>
      </div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="cloud-provider"
          >
            <span
              class="pf-c-form__label-text"
            >
              Cloud Provider
            </span>
            <span
              aria-hidden="true"
              class="pf-c-form__label-required"
            >
               
              *
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <select
            aria-invalid="false"
            aria-label="Cloud Provider"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-FormSelect-default-2"
            data-ouia-component-type="PF4/FormSelect"
            data-ouia-safe="true"
            data-testid="cloud-provider-select"
            disabled=""
            id="cloud_provider_dropdown"
            required=""
          >
            <option
              class=""
              value=""
            >
              Select a provider
            </option>
            <option
              class=""
              data-cy="AWS"
              value="ec2"
            >
              AWS
            </option>
          </select>
          
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="Hosting Platform"
        >
          <span
            class="pf-c-form__label-text"
          >
            Hosting Type
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <select
          aria-invalid="false"
          class="pf-c-form-control"
          data-ouia-component-id="OUIA-Generated-FormSelect-default-1"
          data-ouia-component-type="PF4/FormSelect"
          data-ouia-safe="true"
          disabled=""
          required=""
        >
          <option
            aria-label="Hosting Platform"
            class=""
            value=""
          >
            OpenShift Container Platform
          </option>
        </select>
        
      </div>
    </div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="cloud-provider"
        >
          <span
            class="pf-c-form__label-text"
          >
            Cloud Provider
          </span>
          <span
            aria-hidden="true"
            class="pf-c-form__label-required"
          >
             
            *
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <select
          aria-invalid="false"
          aria-label="Cloud Provider"
          class="pf-c-form-control"
          data-ouia-component-id="OUIA-Generated-FormSelect-default-2"
          data-ouia-component-type="PF4/FormSelect"
          data-ouia-safe="true"
          data-testid="cloud-provider-select"
          disabled=""
          id="cloud_provider_dropdown"
          required=""
        >
          <option
            class=""
            value=""
          >
            Select a provider
          </option>
          <option
            class=""
            data-cy="AWS"
            value="ec2"
          >
            AWS
          </option>
        </select>
        
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Engagement form fields Subdomain form matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-label"
        >
          <label
            class="pf-c-form__label"
            for="subdomain"
          >
            <span
              class="pf-c-form__label-text"
            >
              Desired Subdomain
            </span>
            <span
              aria-hidden="true"
              class="pf-c-form__label-required"
            >
               
              *
            </span>
          </label>
           
        </div>
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="true"
            class="pf-c-form-control"
            data-cy="desired_subdomain_input"
            data-ouia-component-id="OUIA-Generated-TextInputBase-1"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="desired_subdomain_input"
            disabled=""
            id="ocp_sub_domain"
            name="ocp_sub_domain"
            required=""
            type="text"
            value="ordoabchao"
          />
          <div
            aria-live="polite"
            class="pf-c-form__helper-text pf-m-error"
            id="subdomain-helper"
          >
            This subdomain is already being used. Please choose a unique subdomain.
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-c-form__group"
    >
      <div
        class="pf-c-form__group-label"
      >
        <label
          class="pf-c-form__label"
          for="subdomain"
        >
          <span
            class="pf-c-form__label-text"
          >
            Desired Subdomain
          </span>
          <span
            aria-hidden="true"
            class="pf-c-form__label-required"
          >
             
            *
          </span>
        </label>
         
      </div>
      <div
        class="pf-c-form__group-control"
      >
        <input
          aria-invalid="true"
          class="pf-c-form-control"
          data-cy="desired_subdomain_input"
          data-ouia-component-id="OUIA-Generated-TextInputBase-1"
          data-ouia-component-type="PF4/TextInput"
          data-ouia-safe="true"
          data-testid="desired_subdomain_input"
          disabled=""
          id="ocp_sub_domain"
          name="ocp_sub_domain"
          required=""
          type="text"
          value="ordoabchao"
        />
        <div
          aria-live="polite"
          class="pf-c-form__helper-text pf-m-error"
          id="subdomain-helper"
        >
          This subdomain is already being used. Please choose a unique subdomain.
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
